# ioe-student-school-allocation

./: .envrc_sample  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  p-median-pulp.mps  pyproject.toml  reproducible-example.ipynb
data/: example_subject_matches.csv  example_subject_schools.csv  example_subject_student_school_failures.csv  example_subject_student_school_journeys.csv  example_subject_students.csv
scripts/: create_allocation_map.py  prepare_datasets.py
src/ioe/: __init__.py  constants.py  main.py
src/ioe/data/: data_input.py  data_output.py
src/ioe/instructions/: api.py  connection.py  journeys.py
src/ioe/ors/: driving.py  routing.py
src/ioe/scripts/: prepare_datasets.py  tfl.py
src/ioe/tfl/: api.py  connection.py  journeys.py
