[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm",
]

[project]
authors = [
    {email = "patrickjamesroddy@gmail.com", name = "Patrick J. Roddy"},
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]
dependencies = [
    "filelock>=3.12.0",
    "openpyxl>=3.1.2",
    "pandas>=2.0.0",
    "pyrate-limiter>=2.10.0",
    "requests-ratelimiter>=0.4.0",
    "requests>=2.28.2",
]
description = "Public release of the code for paper 846 of AGILE2023"
dynamic = [
    "version",
]
keywords = [
    "education",
    "parallelism",
    "python",
    "requests",
    "tfl-api",
]
name = "ioe"
readme = "README.md"
requires-python = ">=3.9"
license.file = "LICENCE.md"
optional-dependencies.dev = [
    "black",
    "mypy",
    "pre-commit",
    "tox",
]
urls.homepage = "https://github.com/UCL/ioe-student-school-allocation"

[tool.mypy]
explicit_package_bases = true
plugins = "numpy.typing.mypy_plugin"

[tool.ruff]
fix = true
force-exclude = true
ignore = [
    "EM102",
    "S113",
]
select = [
    "A",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "SIM",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
mccabe.max-complexity = 18

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/ioe/_version.py"

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
