[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm",
]

[project]
authors = [
    {email = "patrickjamesroddy@gmail.com", name = "Patrick J. Roddy"},
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]
dependencies = [
    "filelock>=3.12.0",
    "openpyxl>=3.1.2",
    "openrouteservice>=2.3.3",
    "pandas>=2.0.1",
    "pgeocode@git+https://github.com/symerio/pgeocode.git@d5f89074ea73b392e0a21b275dbc002397c4b63c",
    "plotly>=5.14.1",
    "pyrate-limiter>=2.10.0",
    "requests-ratelimiter>=0.4.0",
    "requests>=2.28.2",
]
description = "Public release of the code for paper 846 of AGILE2023"
dynamic = [
    "version",
]
keywords = [
    "education",
    "parallelism",
    "python",
    "requests",
    "tfl-api",
]
name = "ioe"
optional-dependencies = {"dev" = [
    "black",
    "mypy",
    "pre-commit",
    "ruff",
]}
readme = "README.md"
requires-python = ">=3.10"
urls = {Code = "https://github.com/UCL/ioe-student-school-allocation", Homepage = "https://github.com/astro-informatics/sleplet", Issues = "https://github.com/UCL/ioe-student-school-allocation/issues"}
license.file = "LICENCE.md"
scripts.tfl = "ioe.scripts.tfl:main"

[tool.ruff]
fix = true
force-exclude = true
ignore = [
    "EM102",
    "S113",
]
select = [
    "A",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "SIM",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
target-version = "py310"
isort.known-first-party = ["ioe"]
mccabe.max-complexity = 18

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/ioe/_version.py"

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
